--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "xmick/cdapp",
     "autoload": {
         "psr-4": {
-            "Router\\": "routes/"
+            "Router\\": "routes/",
+            "App\\": "app/"
         }
     },
     "authors": [
