--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,5 @@ RewriteRule ^(.*)$ public/index.php?url=$1 [QSA,L]
 
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Origin: "http://localhost:3000/"
 </IfModule>
